--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@charset "UTF-8";
+/* CSS Document */
+
 body, html {
   text-align: center;
   font-family: Gotham, Helvetica, Arial, sans-serif;
@@ -11,8 +14,46 @@ section {
 
 h1 {
   font-size: 2em;
+  color: #7b7d70;
 }
 
 h2 {
   font-size: 1.5em;
+  color: #4eafb8;
+}
+
+p {
+  color: #ff8641;
+}
+
+/*---------- TABLET ----------*/
+
+@media (min-width: 768px) {
+  h1 {
+    color: #02cbd2;
+  }
+  
+  h2 {
+    color: #fcc02a;
+  }
+  
+  p {
+    color: #7b8f8e;
+  }
+}
+
+/*---------- DESKTOP ----------*/
+
+@media (min-width: 1200px) {
+  h1 {
+    color: #634b61;
+  }
+  
+  h2 {
+    color: #cabd61;
+  }
+  
+  p {
+    color: #c19e74;
+  }
 }
